  like other file objects.

- Issue #7357: tarfile no longer suppresses fatal extraction errors by
  default.

- Issue #7470: logging: fix bug in Unicode encoding fallback.

- Issue #5949: fixed IMAP4_SSL hang when the IMAP server response is
  missing proper end-of-line termination.

- Issue #7457: added a read_pkg_file method to 
  distutils.dist.DistributionMetadata.


Tests
-----

- Issue #7396: fix regrtest -s, which was broken by the -j enhancement.

- Issue #7498: test_multiprocessing now uses test_support.find_unused_port
  instead of a hardcoded port number in test_rapid_restart.



What's New in Python 2.7 alpha 1
================================

*Release date: 2009-12-05*

Core and Builtins
-----------------

- Issue #7419: setlocale() could crash the interpreter on Windows when called
  with invalid values.

- Issue #3382: 'F' formatting for float and complex now convert the
  result to upper case. This only affects 'inf' and 'nan', since 'f'
  no longer converts to 'g' for large values.

- Remove switch from "%f" formatting to "%g" formatting for floats
  larger than 1e50 in absolute value.

- Remove restrictions on precision when formatting floats.  E.g.,
  "%.120g" % 1e-100 used to raise OverflowError, but now gives the
  requested 120 significant digits instead.

- Add Py3k warnings for parameter names in parenthesis.

- Issue #7362: Give a proper error message for def f((x)=3): pass.

- Issue #7085: Fix crash when importing some extensions in a thread
  on MacOSX 10.6.

- Issue #7117: repr(x) for a float x returns a result based on the
  shortest decimal string that's guaranteed to round back to x under
  correct rounding (with round-half-to-even rounding mode).
  Previously it gave a string based on rounding x to 17 decimal digits.
  repr(x) for a complex number behaves similarly.  On platforms where
  the correctly-rounded strtod and dtoa code is not supported (see below),
  repr is unchanged.
