@@ -49,6 +49,9 @@ Library
 Tests
 -----
 
+- Issue #7376: instead of running a self-test (which was failing) when called
+  with no arguments, doctest.py now gives a usage message.
+
 - Issue #7396: fix regrtest -s, which was broken by the -j enhancement.
 
 - Issue #7498: test_multiprocessing now uses test_support.find_unused_port
